crates/nx-syntax/tests/fixtures/invalid/multiple-errors.nx
// Multiple syntax errors
let <Broken1 = {
let <Broken2 />
  <div{x</div>
